cashflow merge